added git hub link

--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Perosnal GPT Setup
 email: pramod.shanmugam@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   this is 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "personal_gpt_setup.github.io" # the subpath of your site, e.g. /blog
+url: "https://pramodshanmugam.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: prmaod
 github_username:  pramod.shanmugam
 
